<resources>
    <string name="app_name">OnDemandDoctor</string>
    <string name="text_view1"><![CDATA[Discover & Book On-Demand Docotrs]]></string>
    <string name="text_view2">Explore available doctors, book instant appointment</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="hi">Hi,</string>
    <string name="name_text_view">Whatʼs Your Name?</string>
    <string name="name_edit_text">Enter your full name</string>
    <string name="phone_text_view">Enter your full name</string>
    <string name="phone_edit_text">Your Phone Number</string>
    <string name="phone_view">Your Phone Number</string>
    <string name="phone_edit">Enter your phone number</string>
    <string name="finish">Finish</string>
    <string name="medical">Iʼm your medical arm and Iʼm always happy to help</string>
    <string name="good">Good Morning, Jarvais</string>
    <string name="textview">TextView</string>
    <string name="button">Buttton</string>
    <string name="home">Home</string>
    <string name="what">What do you feel today, Jarvais?</string>
    <string name="started">Get Started</string>
    <string name="lets">Letʼs Build Complete Profile!           Complete your profile to get started</string>
    <string name="let">Letʼs Build Complete Profile!              Complete your profile to get started</string>
    <string name="lets_com">Letʼs Build Complete Profile!</string>
    <string name="profile">Complete your profile to get started</string>
    <string name="what_do">WHAT CAN I DO FOR YOU?</string>
    <string name="buttton">Button</string>
    <string name="send">SEND</string>
    <string name="name">Name</string>
    <string name="texttview">TextView</string>
    <string name="spec">Speciality</string>
    <string name="dentist">Dentistry</string>
    <string name="dermat">Dermatology</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="psych">Psychiatry</string>
    <string name="heart">Heart Surgery</string>
    <string name="chest">Chest and Respiratory</string>
    <string name="hepatology">Hepatology</string>
    <string name="orthoped">Orthopedics</string>
    <string name="speciality">You donʼt know the speciality yet?</string>
    <string name="use_counsiltation">Use online counsiltation Now.</string>
    <string name="book">Book Now</string>
    <string name="locate">Location</string>
    <string name="search">Search by location</string>
    <string name="show">Show Results</string>
    <string name="showresult">SHOW</string>
    <string name="buttone">Button</string>

</resources>

