<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClinicVisit">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/spec" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal"
        tools:context=".ClinicVisit">

        <Button
            android:id="@+id/button2"
            style="@style/Base.Widget.AppCompat.ActionBar"
            android:layout_width="wrap_content"
            android:layout_height="49dp"

            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/list_edit"
            android:text="@string/textview"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            tools:text="@string/dentist" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/list_edit"
            android:text="@string/textview"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            style="@style/Base.Widget.AppCompat.ActionBar"
            tools:text="@string/dermat" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal"
        tools:context=".ClinicVisit">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/list_edit"
            android:text="@string/textview"
            tools:text="@string/psych"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            style="@style/Base.Widget.AppCompat.ActionBar"
            android:layout_marginEnd="20dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/list_edit"
            android:text="@string/textview"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            style="@style/Base.Widget.AppCompat.ActionBar"
            tools:text="@string/heart" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".ClinicVisit">

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/list_edit"
            android:text="@string/textview"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            style="@style/Base.Widget.AppCompat.ActionBar"
            tools:text="@string/chest" />
    </LinearLayout>

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/buttone"
        android:textColor="@color/default_white" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal"
        tools:context=".ClinicVisit">

        <Button
            android:id="@+id/button7"
            style="@style/Base.Widget.AppCompat.ActionBar"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/list_edit"
            android:text="@string/hepatology"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button8"
            style="@style/Base.Widget.AppCompat.ActionBar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/list_edit"
            android:text="@string/textview"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            tools:text="@string/orthoped" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".ClinicVisit">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="247dp"
            android:layout_height="35dp"
            android:text="@string/speciality"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_edit"
            android:text="@string/book"
            android:textColor="@color/default_white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/use_counsiltation" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/spec"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        tools:text="@string/locate" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="344dp"
        android:layout_height="28dp"

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/showresult"
        android:textColor="@color/default_white" />

</LinearLayout>