<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:text="@string/hi"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@android:color/background_light"
        android:text="@string/name_text_view"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/name_edit_text"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorLink="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/phone_view"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/phone_edit"
        android:inputType="phone"
        android:paddingBottom="10dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorLink="@android:color/background_dark" />

    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_edit"
        android:text="@string/finish"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        tools:textAllCaps="false" />
</LinearLayout>