<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/message1"
        android:layout_width="336dp"
        android:layout_height="327dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/textview" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="265dp"
        android:layout_height="108dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/message1"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="sendMessage"
        android:text="@string/send" />
</RelativeLayout>
