<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Start">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="@color/default_qua">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:text="@string/good"
            android:textColor="?attr/actionModeSplitBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="408dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/medical"
            android:textColor="?attr/actionModeSplitBackground"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/textview7"
            android:layout_width="350dp"
            android:layout_height="51dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="90dp"
            android:background="@color/default_white"
            android:text="@string/what"
            android:textSize="17sp"
            android:textStyle="normal|bold" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/what_do"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"

        android:layout_height="190dp">

    </ListView>
    <android.support.design.widget.TabLayout
            android:id="@+id/tab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:tabBackground="@color/colorPrimary"
            app:tabIconTint="@color/default_gray"
            app:tabIndicatorColor="@color/default_white"
            app:tabSelectedTextColor="@color/default_white"
            app:tabTextAppearance="@style/customTabLayout"
            app:tabTextColor="@color/default_gray" />




</LinearLayout>