<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Log_In">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:layout_marginTop="2dp"

        app:cardBackgroundColor="@color/default_qua">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:text="@string/good"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="408dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/medical"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/textview7"
            android:layout_width="350dp"
            android:layout_height="51dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="120dp"
            android:background="@color/default_white"
            android:text="@string/what"
            android:textSize="17sp"
            android:textStyle="normal|bold" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="15dp"

        android:background="@drawable/button_edit"
        app:cardBackgroundColor="@color/default_ebda">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/lets_com"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="50dp"
            android:text="@string/profile"
            android:textSize="17sp" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/started"
        android:textAllCaps="false"
        android:background="@drawable/button_edit"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tab1"
        android:layout_width="match_parent"
        style="@style/customTabLayout"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        app:tabBackground="@color/colorPrimary"
        app:tabIndicatorColor="@color/default_white"
        app:tabIconTint="@color/default_gray"
        app:tabTextColor="@color/default_gray"
        app:tabSelectedTextColor="@color/default_white"
        app:tabTextAppearance="@style/customTabLayout"
        android:layout_gravity="bottom"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:scrollbarStyle="insideInset"
        app:tabGravity="fill"
        app:tabMode="scrollable"/>


  <!--  <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <HorizontalScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none">

            </HorizontalScrollView>

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"

                android:background="@color/colorPrimaryDark">

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">


                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:accessibilityHeading="true"
                    android:addStatesFromChildren="true"
                    android:alwaysDrawnWithCache="false"
                    android:orientation="vertical"
                    >

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textAllCaps="false">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>-->


</LinearLayout>

